--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -28,7 +28,7 @@
   content: "\e900";
 }
 .icon-cosmetic:before {
-  content: "\e907";
+  content: "\e901";
 }
 .icon-facebook:before {
   content: "\e908";
@@ -46,13 +46,13 @@
   content: "\e906";
 }
 .icon-trim:before {
-  content: "\e90d";
+  content: "\e908";
 }
 .icon-whatsapp:before {
   content: "\e90e";
 }
 .icon-woman-hair:before {
-  content: "\e90f";
+  content: "\e90a";
 }
 .icon-youtube:before {
   content: "\e910";
